--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Kyle E. Mitchell's Reference Pages
+title: Kyle E. Mitchell's Reference Pages
 url: https://reference.kemitchell.com
 homepage: https://reference.kemitchell.com
 exclude:
